# recipe-macros-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-ssl.sh  pyproject.toml
app/: config.py  main.py
app/api/: auth.py  logs.py  nutrition.py  overrides.py  recipe.py  router.py
app/data/: build_nutrition_db.py
app/models/: schemas.py
app/services/: calculator.py  nutrition.py  parser.py  request_log.py  scraper.py
app/templates/: admin.html  index.html
nginx/: nginx-init.conf  nginx.conf
