[project]
name = "calorie-app"
version = "0.1.0"
description = "Recipe URL to macros calculator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.28",
    "recipe-scrapers>=15.0",
    "ingredient-parser-nlp>=2.7",
    "jinja2>=3.1",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
